HT-603: Added new attribute for password Input component and refactor to use composition API (#806)
* HT-603: Added new attribute for Password Input component

* HT-603:update change  log file

* HT-603:Fixed validation issue

* HT-603:Fix validation issue in password component

--- a/components/src/core/components/Input/password-input.scss
+++ b/components/src/core/components/Input/password-input.scss
@@ -119,4 +119,17 @@
       box-shadow: 0 0 5px 0.2rem rgba(147, 180, 15, 0.1);
     }
   }
+
+  /* Below minimum Strength */
+  &.below-minimum-strength {
+    .password-strength-check {
+      background-color: #929baa;
+      color: #ffffff;
+    }
+    :deep(.oxd-input) {
+      border: 1px solid #ff4e00;
+      box-shadow: 0 0 5px 0.2rem rgba(223, 9, 16, 0.1);
+    }
+  }
+
 }
