--- a/components/src/core/components/Input/checkbox-input.scss
+++ b/components/src/core/components/Input/checkbox-input.scss
@@ -2,6 +2,17 @@
 @import 'variables';
 
 .oxd-checkbox-wrapper {
+
+  .border-enabled {
+    border: 1px solid #ccc;
+    padding: 8px;
+    border-radius: 10px;
+  }
+  .--error {
+    border: $oxd-input-border--error;
+    box-shadow: $oxd-input-box-shadow--error;
+  }
+  
   .oxd-checkbox-option-label {
     overflow-wrap: break-word;
     word-break: break-all;
