--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -85,7 +85,7 @@
     }
     :deep(.oxd-table-th) {
       &:first-child {
-        padding-left: 0;
+        padding-left: 5px;
       }
       text-align: left;
       padding-top: 0.65rem;
