--- a/components/src/core/components/ListTable/list-table.scss
+++ b/components/src/core/components/ListTable/list-table.scss
@@ -42,6 +42,7 @@
 }
 ::v-deep(.oxd-table-cell-actions) {
   flex-wrap: nowrap;
+  
 }
 ::v-deep(.oxd-table-cell-actions .oxd-select-text) {
   max-width: 195px;
@@ -64,7 +65,7 @@
   @include truncate(2, 1);
 }
 
-:deep(.oxd-table-row > div:nth-child(1)) {
+::v-deep(.oxd-table-row > div:nth-child(1)) {
   padding-left: 5px;
 }
 
