--- a/components/src/core/components/CardTable/Table/table-row.scss
+++ b/components/src/core/components/CardTable/Table/table-row.scss
@@ -25,3 +25,20 @@
 .oxd-table-row--clickable {
   cursor: pointer;
 }
+
+:deep(.oxd-table-th) {
+  &:first-child {
+    padding-left: 5px;
+  }
+}
+
+:deep(.oxd-table-cell) {
+  &:first-child {
+    padding-left: 5px;
+  }
+}
+
+:deep(.checkbox-cell ){
+  padding-right: 0;
+}
+
