--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -98,7 +98,7 @@
         }
       }
     }
-    :deep(.oxd-table-th:has(.oxd-checkbox-input)) {
+    :deep(.oxd-table-th:has(.oxd-checkbox-input)), :deep(.oxd-table-cell:has(.oxd-checkbox-input)) {
       &:first-child {
         padding-right: 0;
       }
@@ -115,11 +115,6 @@
           width: -moz-fit-content;
           width: fit-content;
         }
-      }
-    }
-    :deep(.oxd-table-cell:has(.oxd-checkbox-input)) {
-      &:first-child {
-        padding-right: 0;
       }
     }
     :deep(.oxd-checkbox-input) {
