--- a/components/src/core/components/CardTable/Table/table-row.scss
+++ b/components/src/core/components/CardTable/Table/table-row.scss
@@ -26,13 +26,7 @@
   cursor: pointer;
 }
 
-:deep(.oxd-table-th) {
-  &:first-child {
-    padding-left: 5px;
-  }
-}
-
-:deep(.oxd-table-cell) {
+:deep(.oxd-table-th), :deep(.oxd-table-cell){
   &:first-child {
     padding-left: 5px;
   }
