--- a/components/src/core/components/CardTable/Table/table-row.scss
+++ b/components/src/core/components/CardTable/Table/table-row.scss
@@ -26,6 +26,10 @@
   cursor: pointer;
 }
 
+:deep(.oxd-table-cell-actions) {
+  justify-content: right;
+}
+
 :deep(.oxd-table-th), :deep(.oxd-table-cell){
   &:first-child {
     padding-left: 5px;
