--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -117,6 +117,9 @@
         }
       }
     }
+    :deep(.oxd-table-cell-actions) {
+      justify-content: right;
+    }
     :deep(.oxd-checkbox-input) {
       @media (min-width: 0px) and (max-width: 1366px) {
         margin-right: 0;
