--- a/components/src/core/components/ListTable/list-table.scss
+++ b/components/src/core/components/ListTable/list-table.scss
@@ -66,7 +66,7 @@
 }
 
 ::v-deep(.oxd-table-cell-actions) {
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 ::v-deep(.oxd-table-row > div:nth-child(1)) {
